--- a/services/serviceA/package.json
+++ b/services/serviceA/package.json
@@ -11,11 +11,6 @@
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "react-image-fallback": "8.0.0",
-    "react-image-lightbox": "4.6.0",
-    "react-router": "5",
-    "react-router-dom": "5",
-    "react-scroll": "1.7.11",
-    "react-slick": "0.16.0"
+    "react-image-fallback": "8.0.0"
   }
 }
